[package]
name = "pinterest-login"
version = "0.1.1"
edition = "2021"
rust-version = "1.64.0"
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "A Pinterest login library that uses chromiumoxide to emulate a browser and login to Pinterest."
license = "MIT OR Unlicense"
repository = "https://github.com/0x61nas/pinterest-login"
documentation = "https://docs.rs/pinterest-login"
keywords = [
    "pinterest",
    "login",
    "authentication",
    "pinterest-api",
]
categories = ["web-programming", "api-bindings", "authentication"]

[dependencies]
futures = "0.3.29"
thiserror = "1.0.50"
async-trait = "0.1.74"

[dependencies.chromiumoxide]
version = "0.5.5"
default-features = false

[dependencies.async-std]
version = "1.12.0"
optional = true

[dependencies.tokio]
version = "1.33.0"
optional = true

[dependencies.log]
version = "0.4.20"
optional = true

[features]
default = ["async-std-runtime"]
debug = ["log"]
async-std-runtime = ["async-std", "chromiumoxide/async-std-runtime"]
tokio-runtime = ["tokio", "chromiumoxide/tokio-runtime"]
