[package]
name = "pinterest-login"
version = "0.1.2"
edition = "2021"
rust-version = "1.64.0"
autobins =  false
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "A Pinterest login library that uses chromiumoxide to emulate a browser and login to Pinterest."
license = "MIT OR Unlicense"
repository = "https://github.com/0x61nas/pinterest-login"
documentation = "https://docs.rs/pinterest-login"
keywords = [
    "pinterest",
    "login",
    "authentication",
    "pinterest-api",
]
categories = ["web-programming", "api-bindings", "authentication"]

[[bin]]
name = "pintrest-login"
path = "src/bin/main.rs"
# required-feautres = ["tokio-runtime"]

[dependencies]
futures = "0.3.28"
thiserror = "1.0.48"
async-trait = "0.1.73"

[dependencies.chromiumoxide]
version = "0.5.1"
default-features = false

[dependencies.async-std]
version = "1.12.0"
optional = true

[dependencies.tokio]
version = "1.32.0"
optional = true

[dependencies.log]
version = "0.4.20"
optional = true

[features]
default = ["__async-std"]
log = ["dep:log"]
__async-std = ["dep:async-std", "chromiumoxide/async-std-runtime"]
tokio = ["dep:tokio", "chromiumoxide/tokio-runtime"]
