[package]
name = "pinterest-login"
version = "0.2.0-alpha.1"
edition = "2021"
rust-version = "1.72.1"
autobins =  false
authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "A Pinterest login library that uses chromiumoxide to emulate a browser and login to Pinterest."
license = "MIT OR Unlicense"
repository = "https://github.com/0x61nas/pinterest-login"
documentation = "https://docs.rs/pinterest-login"
keywords = [
    "pinterest",
    "login",
    "authentication",
    "pinterest-api",
]
categories = ["web-programming", "api-bindings", "authentication"]

[[bin]]
name = "pintrest-login"
path = "src/bin/main.rs"
required-features = ["__bin"]

[dependencies]
futures = "0.3.28"
thiserror = "1.0.58"
async-trait = "0.1.79"
pretty_env_logger = "0.5.0"
lazy-regex = "3.1.0"
rpassword = { version = "7", optional = true }

[dependencies.chromiumoxide]
version = "0.5.7"
default-features = false

[dependencies.async-std]
version = "1.12.0"
optional = true

[dependencies.tokio]
version = "1.36.0"
optional = true

[dependencies.log]
version = "0.4.21"
optional = true

[features]
default = ["__async-std", "__bin"]
log = ["dep:log"]
__async-std = ["dep:async-std", "chromiumoxide/async-std-runtime"]
tokio = ["dep:tokio", "chromiumoxide/tokio-runtime"]
__bin = ["rpassword"]

[profile.release]
panic = "abort"
strip = "symbols"
lto = true
codegen-units = 1
